tests/snapshots/tests__sort_requires_with_glob@ignore-multi-require.lua.snap
---
source: tests/tests.rs
expression: "format!(\"glob_pattern: {}\\n{}\", glob_pattern,\nformat_code(&contents, Config\n{\n    sort_requires: SortRequiresConfig\n    { enabled: true, glob: Some(glob_pattern.to_string()) },\n    ..Config::default()\n}, None, OutputVerification::None).unwrap())"
input_file: tests/inputs-sort-requires/ignore-multi-require.lua
---
glob_pattern: C*
local c = require("c")
local b, a = require("b"), require("a")
